packages/cashc/test/compiler/InvalidSymbolTypeError/class_name_as_id.cash
contract Test() {
    return {
        hello() {
            require(LockingBytecodeP2PKH == bytes34(0));
        }
    }
}
